# kongar-ugv_completed

./: ADVANCED_FEATURES.md  Advanced OD.py  COMPETITION_CHECKLIST.md  CONTRIBUTING.md  Command.py  Connection between teensy-rpi  FreeRTOS struct.cpp  GPS.py  General.c  Image+MotorControl.py  LICENSE  MotorControl.cpp  MotorPID.py  PID+IMU.cpp  PIDforOD.py  QUICKSTART.md  README.md  advanced_OD.py  requirements.txt
Lidar/: README.md  SLAM.py
Stand-Alone-Bare-Metal-main/: INTEGRATION.md  MIMXRT1062xxxxx_flexspi_nor.ld  Makefile  README.md  TESTING_GUIDE.md  build_and_flash.bat
Stand-Alone-Bare-Metal-main/include/: MIMXRT1062.h  Teensy_Encoder.h  Teensy_PWM.h  Teensy_SPI.h  Teensy_UART.h  pid_controller.h  serial_protocol.h  system_MIMXRT1062.h
Stand-Alone-Bare-Metal-main/src/: Teensy_Encoder.c  Teensy_PWM.c  Teensy_SPI.c  Teensy_UART.c  main.cpp  pid_controller.cpp  serial_protocol.cpp  system_MIMXRT1062.c
dashboard/: app.py  database.py  requirements.txt
dashboard/templates/: index.html
firmware/: platformio.ini
firmware/include/: config.h  motor_driver.h  pid_controller.h  serial_protocol.h  spi_handler.h  watchdog.h
firmware/src/: main.cpp  motor_driver.cpp  pid_controller.cpp  serial_protocol.cpp  spi_handler.cpp  watchdog.cpp
ros2_ws/: ros2_packages.txt
ros2_ws/src/ugv_launch/: package.xml  setup.py
ros2_ws/src/ugv_launch/config/: nav2_params.yaml  slam_params.yaml
ros2_ws/src/ugv_launch/launch/: full_system.launch.py  system.launch.py
ros2_ws/src/ugv_launch/ugv_launch/: __init__.py
training/: README.md  teknofest_parkour.yaml  train_yolo.py
(+23 files in other folders)
