<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_launch</name>
  <version>1.0.0</version>
  <description>Launch files and config for Teknofest UGV</description>
  <maintainer email="kongar.ugv@gmail.com">Team KONGAR</maintainer>
  <license>MIT</license>

  <exec_depend>ugv_interface</exec_depend>
  <exec_depend>ugv_control</exec_depend>
  <exec_depend>ugv_vision</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
